PROG Fixed full path in truth data Ref#1553
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5763 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/chandrayaan1/apps/chan1m32isis/tsts/badFile/Makefile
+++ b/isis/src/chandrayaan1/apps/chan1m32isis/tsts/badFile/Makefile
@@ -4,9 +4,12 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	if [ `$(APPNAME) from=$(INPUT)/lua1855j.310 \
-	   loc=$(OUTPUT)/loc.cub \
-	   obs=$(OUTPUT)/obs.cub \
-           to=$(OUTPUT)/junk.cub >& $(OUTPUT)/error.txt` ]; \
+	  loc=$(OUTPUT)/loc.cub \
+	  obs=$(OUTPUT)/obs.cub \
+          to=$(OUTPUT)/junk.cub >& $(OUTPUT)/temporary.txt` ]; \
         then \
 	  true; \
         fi;
+	$(SED) 's+\(\[.*/\)\(.*\]\)+\[\2+' $(OUTPUT)/temporary.txt >& $(OUTPUT)/error.txt; \
+	rm $(OUTPUT)/temporary.txt; \
+
