Fixed cassini vims category test. References #1289.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5779 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/tsts/vims/Makefile
+++ b/isis/src/cassini/tsts/vims/Makefile
@@ -16,35 +16,69 @@ commands:
           VIS= $(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           IR= $(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub > /dev/null
 
+#  Test IR
 	$(SPICEINIT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
-          PCK=$(ISIS3DATA)/cassini/kernels/pck/cpck24Jul2006.tpc \
+	  PCK=$(ISIS3DATA)/cassini/kernels/pck/cpck24Jul2006.tpc \
+	  > /dev/null
+
+	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=35 LINE=8 ALLOWOUTSIDE=no \
           > /dev/null
 
 	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
-          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl SAMPLE=35 LINE=8 ALLOWOUTSIDE=no \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=55 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
 	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
-          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl SAMPLE=55 LINE=33 ALLOWOUTSIDE=no \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=32 LINE=58 ALLOWOUTSIDE=no \
           > /dev/null
 
 	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
-          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl SAMPLE=32 LINE=58 ALLOWOUTSIDE=no \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=4 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
 	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
-          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl SAMPLE=4 LINE=33 ALLOWOUTSIDE=no \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=32 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
-          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl SAMPLE=32 LINE=33 ALLOWOUTSIDE=no \
-          > /dev/null
-
-	cat $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl | \
+	cat $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl | \
           sed 's/\([0-9]*\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
           > $(OUTPUT)/temp.txt
 
-	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl
+	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl
+
+#  Test Vis
+	$(SPICEINIT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+          PCK=$(ISIS3DATA)/cassini/kernels/pck/cpck24Jul2006.tpc \
+          > /dev/null
+
+	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=35 LINE=8 ALLOWOUTSIDE=no \
+          > /dev/null
+
+	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=55 LINE=33 ALLOWOUTSIDE=no \
+          > /dev/null
+
+	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=32 LINE=58 ALLOWOUTSIDE=no \
+          > /dev/null
+
+	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=4 LINE=33 ALLOWOUTSIDE=no \
+          > /dev/null
+
+	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+          to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=32 LINE=33 ALLOWOUTSIDE=no \
+          > /dev/null
+
+	cat $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl | \
+          sed 's/\([0-9]*\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
+          > $(OUTPUT)/temp.txt
+
+	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl
+
+
 
 	$(ECHO) "Output of getsn..." >> $(OUTPUT)/CM_1477461989_1.cub--getsnOutput.txt
 
@@ -57,13 +91,13 @@ commands:
 
 #  Test south pole
 	$(CAMPT) from=$(INPUT)/C1596102183_1.irBand71.cub type=ground lat=-90 lon=0 \
-	  to=$(OUTPUT)/C1596102183_1.ir.pvl > /dev/null
+          to=$(OUTPUT)/C1596102183_1.ir.pvl > /dev/null
 
 #  Make sure there are no extra pixels in projected cube.  Global projections were getting ghost
 #  images because the vims camera model finds solution for any lat/lon and the range checking 
 #  was not working correctly.
 	$(CAM2MAP) from=$(INPUT)/C1514302573_1.irBand71.cub to=$(OUTPUT)/C1514302573_1.irBand71.sinu.cub \
-	  map='$$base/templates/maps/sinusoidal.map' \
-	  pixres=ppd resolution=2 defaultrange=map minlat=-90 maxlat=90 minlon=0 maxlon=360 \
-	  trim=yes > /dev/null
+          map='$$base/templates/maps/sinusoidal.map' \
+          pixres=ppd resolution=2 defaultrange=map minlat=-90 maxlat=90 minlon=0 maxlon=360 \
+          trim=yes > /dev/null
 
