PROG:  Forget to checkin Makefile for lonboundary test.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5782 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/pixel2map/tsts/lonboundary/Makefile
+++ b/isis/src/base/apps/pixel2map/tsts/lonboundary/Makefile
@@ -4,5 +4,5 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from= $(INPUT)/C1621694254_1.ir.band248.cub \
-        to=$(OUTPUT)/C1621694254_1.ir.equi.cub \
+        to=$(OUTPUT)/C1621694254_1.ir.equi.cub lonseam=continue \
 	map=$(ISIS3DATA)/base/templates/maps/equirectangular.map > /dev/null;
