PROG:  Added tolerance for C1514302573_1.irBand71.sinu.cub
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5783 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/tsts/vims/Makefile
+++ b/isis/src/cassini/tsts/vims/Makefile
@@ -9,6 +9,8 @@ CAMPT = campt
 CAM2MAP = cam2map
 GETSN = getsn
 
+C1514302573_1.irBand71.sinu.cub.TOLERANCE = 0.0000001 
+ 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
