In spiceserver, instead of opening $base/testdata/isisTruth.cub spiceserver now creates a cube from the label information that it receives from spiceinit. This change was made because the camera classes (Camera, CameraFactory, Sensor, Spice,...) now take a cube as input to their constructors instead of a pvl. The isisTruth.cub dimensions did not match the dimensions in the label (from spiceinit), causing spiceserver to return an incorrect end time for the spice information. Added TEMPFILE parameter for testing purposes. Fixes #2030.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5819 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/spiceserver/tsts/simplerequest/Makefile
+++ b/isis/src/base/apps/spiceserver/tsts/simplerequest/Makefile
@@ -15,4 +15,4 @@ include $(ISISROOT)/make/isismake.tsts
 # Valid text comes out magically. I promise! :)
 commands:
 	$(APPNAME) from=$(INPUT)/request.txt checkversion=false to=$(OUTPUT)/result.txt \
-	  > /dev/null;
+	  tempfile=$(OUTPUT)/tempCube.cub > /dev/null;
