In thm2isis, added history to output cubes. Fixes #1683.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5833 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thm2isis/tsts/case01/Makefile
+++ b/isis/src/odyssey/apps/thm2isis/tsts/case01/Makefile
@@ -5,3 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/I00831002RDR.QUB \
 	to=$(OUTPUT)/truth.cub > /dev/null;
+	cathist from=$(INPUT)/standardOutTruth.pvl.DIFF \
+	to=$(OUTPUT)/standardOutTruth.pvl;
