--- a/isis/src/odyssey/apps/thm2isis/tsts/case02/Makefile
+++ b/isis/src/odyssey/apps/thm2isis/tsts/case02/Makefile
@@ -3,4 +3,7 @@ APPNAME = thm2isis
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/V00821003RDR.QUB to=$(OUTPUT)/thm2isis-Truth3.cub+32bit > /dev/null;
+	$(APPNAME) from=$(INPUT)/V00821003RDR.QUB \
+	to=$(OUTPUT)/thm2isis-Truth3.cub+32bit > /dev/null;
+	cathist from=$(INPUT)/standardOutTruth2.pvl.DIFF \
+	to=$(OUTPUT)/standardOutTruth2.pvl;
