PROG fixed apptests. References #1683.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5834 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thm2isis/tsts/case01/Makefile
+++ b/isis/src/odyssey/apps/thm2isis/tsts/case01/Makefile
@@ -6,4 +6,4 @@ commands:
 	$(APPNAME) from=$(INPUT)/I00831002RDR.QUB \
 	to=$(OUTPUT)/truth.cub > /dev/null;
 	cathist from=$(INPUT)/standardOutTruth.pvl.DIFF \
-	to=$(OUTPUT)/standardOutTruth.pvl;
+	to=$(OUTPUT)/standardOutTruth.pvl > /dev/null;
