--- a/isis/src/odyssey/apps/thm2isis/tsts/case02/Makefile
+++ b/isis/src/odyssey/apps/thm2isis/tsts/case02/Makefile
@@ -6,4 +6,4 @@ commands:
 	$(APPNAME) from=$(INPUT)/V00821003RDR.QUB \
 	to=$(OUTPUT)/thm2isis-Truth3.cub+32bit > /dev/null;
 	cathist from=$(INPUT)/standardOutTruth2.pvl.DIFF \
-	to=$(OUTPUT)/standardOutTruth2.pvl;
+	to=$(OUTPUT)/standardOutTruth2.pvl > /dev/null;
