--- a/isis/src/odyssey/apps/thm2isis/tsts/case01/Makefile
+++ b/isis/src/odyssey/apps/thm2isis/tsts/case01/Makefile
@@ -5,5 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/I00831002RDR.QUB \
 	to=$(OUTPUT)/truth.cub > /dev/null;
-	cathist from=$(INPUT)/standardOutTruth.pvl.DIFF \
-	to=$(OUTPUT)/standardOutTruth.pvl > /dev/null;
+	cathist from=$(OUTPUT)/truth.cub \
+	to=$(OUTPUT)/historyTruth.pvl > /dev/null;
