--- a/isis/src/near/apps/msi2isis/tsts/bilinear/Makefile
+++ b/isis/src/near/apps/msi2isis/tsts/bilinear/Makefile
@@ -6,4 +6,5 @@ commands:
 	$(APPNAME) from=$(INPUT)/m0126865998f4_2p_iof.fit \
 	to=$(OUTPUT)/truth.cub \
 	interp=bilinear > /dev/null;
+	catoriglab from=$(OUTPUT)/truth.cub to=$(OUTPUT)/origLabels.pvl > /dev/null; 
 	catlab from=$(OUTPUT)/truth.cub to=$(OUTPUT)/truth.pvl > /dev/null;
