Updated deltack's hist test to clean up output files. Fixes #2057
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5853 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/deltack/tsts/hist/Makefile
+++ b/isis/src/control/apps/deltack/tsts/hist/Makefile
@@ -11,6 +11,9 @@ commands:
 	  line1=669.375                              \
 	  lat1=-26.439008370134                      \
 	  lon1= 352.19745020451 > /dev/null;         \
-	cathist from=$(OUTPUT)/vik.cub > $(OUTPUT)/pvlTruth.pvl;\
+	cathist from=$(OUTPUT)/vik.cub > $(OUTPUT)/pvlTruth.pvl;
+	$(RM) bundleout.txt > /dev/null; 
+	$(RM) residuals.csv > /dev/null; 
 	$(RM) $(OUTPUT)/vik.cub;
+
 	  
