Fixed string conversion error in apollofindrx and added test. Fixes #2043
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5859 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollofindrx/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollofindrx/tsts/default/Makefile
@@ -3,4 +3,7 @@ APPNAME = apollofindrx
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	cp $(INPUT)/deferred.txt $(OUTPUT)/deferred.txt > /dev/null;
+	cp $(INPUT)/AS15-M-1450.cub $(OUTPUT)/AS15-M-1450.cub > /dev/null; 
+	apollofindrx from=$(OUTPUT)/AS15-M-1450.cub > /dev/null;
+	catlab from=$(OUTPUT)/AS15-M-1450.cub \
+        to=$(OUTPUT)/AS15-M-1450.pvl > /dev/null; 
