--- a/isis/src/base/apps/fits2isis/tsts/default/Makefile
+++ b/isis/src/base/apps/fits2isis/tsts/default/Makefile
@@ -4,8 +4,8 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/WFPC2u5780205r_c0fx.fits \
-	to=$(OUTPUT)/fitsTruth.cub
-#	> /dev/null;
+	to=$(OUTPUT)/fitsTruth.cub \
+	> /dev/null;
 	raw2isis from=$(INPUT)/WFPC2u5780205r_c0fx.fits \
 	to=$(OUTPUT)/rawTruth.cub \
 	SAMPLES=200 LINES=200 BANDS=4 SKIP=23040 \
