--- a/isis/src/mro/apps/ctxcal/tsts/default/Makefile
+++ b/isis/src/mro/apps/ctxcal/tsts/default/Makefile
@@ -5,5 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/P01_001473_2479_XI_67N185W.cub \
 	 TO=$(OUTPUT)/P01_001473_2479_XI_67N185W.cal.cub \
-	 flatfile=/usgs/cpkgs/isis3/data/mro/calibration/ctxFlat_0001.cub \
+	 flatfile=$(ISIS3DATA)/mro/calibration/ctxFlat_0001.cub \
 	 > /dev/null;
