PROG: Adjusted the cubediff tolerance for thmproc vis app test.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5968 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thmproc/tsts/vis/Makefile
+++ b/isis/src/odyssey/apps/thmproc/tsts/vis/Makefile
@@ -10,6 +10,8 @@
 #
 APPNAME = thmproc
 
+V14093008RDR.even.cub.TOLERANCE = 0.0000000002
+V01001002EDR.cub.TOLERANCE = 0.00002
 V05642009RDR.cub.TOLERANCE = 0.0000000002
 
 include $(ISISROOT)/make/isismake.tsts
