--- a/isis/src/odyssey/apps/thmvistrim/tsts/errors/Makefile
+++ b/isis/src/odyssey/apps/thmvistrim/tsts/errors/Makefile
@@ -7,7 +7,8 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	echo -e "Error Test: input cube is not THEMIS VIS " > $(OUTPUT)/error_temp.txt;
 	$(APPNAME) FROM=$(INPUT)/I00831002RDR.cropped.cub \
-	TO=$(INPUT)/I00831002RDR.trimmed.cub 2>> $(OUTPUT)/error_temp.txt > /dev/null;
+	TO=$(OUTPUT)/I00831002RDR.trimmed.cub 2>> $(OUTPUT)/error_temp.txt > /dev/null;
 
 	$(SED) 's+\[/.*/input/+\[input/+' $(OUTPUT)/error_temp.txt > $(OUTPUT)/error.txt;
+	$(RM) $(OUTPUT)/I00831002RDR.trimmed.cube;
 	$(RM) $(OUTPUT)/error_temp.txt;
