--- a/isis/src/mro/apps/marcical/tsts/default/Makefile
+++ b/isis/src/mro/apps/marcical/tsts/default/Makefile
@@ -3,7 +3,7 @@ APPNAME = marcical
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/P12_005901_3391_MA_00N096W.even.crop.cub \
+	$(APPNAME) FROM=$(INPUT)/crop.cub \
 	  TO=$(OUTPUT)/truth_default.cub > /dev/null;
-	$(APPNAME) FROM=$(INPUT)/P12_005901_3391_MA_00N096W.even.crop.cub iof=no \
+	$(APPNAME) FROM=$(INPUT)/crop.cub iof=no \
 	  TO=$(OUTPUT)/truth_not_iof.cub > /dev/null;
