Added a tolerance limit to the cube difference calculation so that roundoff error will not cause the appTests to fail.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6019 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/marcical/tsts/default/Makefile
+++ b/isis/src/mro/apps/marcical/tsts/default/Makefile
@@ -1,6 +1,8 @@
 APPNAME = marcical
 
 include $(ISISROOT)/make/isismake.tsts
+truth_default.cub.TOLERANCE = 0.0000000000001
+truth_not_iof.cub.TOLERANCE = 0.0000000000001
 
 commands:
 	$(APPNAME) FROM=$(INPUT)/P12_005901_3391_MA_00N096W.even.crop.cub \
