PROG forgot to commit the Makefile to the repository for isis2ascii. Ref #2098
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6048 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isis2ascii/tsts/casesmall/Makefile
+++ b/isis/src/base/apps/isis2ascii/tsts/casesmall/Makefile
@@ -1,6 +1,8 @@
 APPNAME = isis2ascii
 
 include $(ISISROOT)/make/isismake.tsts
+vikcalascii.txt.SKIPLINES = 1
+
 
 commands:
 	$(APPNAME) from = $(INPUT)/vikcalTruth.cub \
