--- a/isis/src/base/apps/isis2ascii/tsts/caselarge/Makefile
+++ b/isis/src/base/apps/isis2ascii/tsts/caselarge/Makefile
@@ -1,6 +1,8 @@
 APPNAME = isis2ascii
 
 include $(ISISROOT)/make/isismake.tsts
+vesta64ascii.txt.SKIPLINES = 1
+
 
 commands:
 	$(APPNAME) from = $(INPUT)/vesta64_dtm_top.cub \
