PROG Fixed test filepath problems in Makefiles. References #1449.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6085 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/campt/tsts/pointlist_append/Makefile
+++ b/isis/src/base/apps/campt/tsts/pointlist_append/Makefile
@@ -11,6 +11,11 @@ commands:
 	coordlist=$(INPUT)/image.lis \
 	to=$(OUTPUT)/pointlistAppendTruth.pvl \
 	coordtype=IMAGE > /dev/null;
+	cat $(OUTPUT)/pointlistAppendTruth.pvl | \
+	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/g' \
+	> $(OUTPUT)/pointlistAppendTruthtmp.pvl;
+	$(MV) $(OUTPUT)/pointlistAppendTruthtmp.pvl \
+	$(OUTPUT)/pointlistAppendTruth.pvl;
 	$(APPNAME) from=$(INPUT)/ab102401.cub \
 	coordlist=$(INPUT)/image.lis \
 	format=FLAT coordtype=IMAGE \
@@ -19,3 +24,8 @@ commands:
 	coordlist=$(INPUT)/image.lis \
 	format=FLAT coordtype=IMAGE \
 	to=$(OUTPUT)/pointlistAppendTruth.csv > /dev/null;
+	cat $(OUTPUT)/pointlistAppendTruth.csv | \
+	$(SED) 's/^.*\(ab102401.cub\)\(.*\)/\1\2/g' \
+	> $(OUTPUT)/pointlistAppendTruthtmp.csv;
+	$(MV) $(OUTPUT)/pointlistAppendTruthtmp.csv \
+	$(OUTPUT)/pointlistAppendTruth.csv;
