--- a/isis/src/base/apps/campt/tsts/pointlist_error/Makefile
+++ b/isis/src/base/apps/campt/tsts/pointlist_error/Makefile
@@ -7,3 +7,8 @@ commands:
 	coordlist=$(INPUT)/image_error.lis \
 	to=$(OUTPUT)/pointlistErrorTruth.pvl \
 	append=false coordtype=IMAGE > /dev/null;
+	cat $(OUTPUT)/pointlistErrorTruth.pvl | \
+	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/g' \
+	> $(OUTPUT)/pointlistErrorTruthtmp.pvl;
+	$(MV) $(OUTPUT)/pointlistErrorTruthtmp.pvl \
+	$(OUTPUT)/pointlistErrorTruth.pvl;
