--- a/isis/src/base/apps/campt/tsts/pointlist_ground/Makefile
+++ b/isis/src/base/apps/campt/tsts/pointlist_ground/Makefile
@@ -7,3 +7,8 @@ commands:
 	coordlist=$(INPUT)/ground.lis \
 	to=$(OUTPUT)/pointlistGroundTruth.pvl \
 	append=false coordtype=GROUND > /dev/null;
+	cat $(OUTPUT)/pointlistGroundTruth.pvl | \
+	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/g' \
+	> $(OUTPUT)/pointlistGroundTruthtmp.pvl; 
+	$(MV) $(OUTPUT)/pointlistGroundTruthtmp.pvl \
+	$(OUTPUT)/pointlistGroundTruth.pvl;
