--- a/isis/src/base/apps/campt/tsts/pointlist_no_append/Makefile
+++ b/isis/src/base/apps/campt/tsts/pointlist_no_append/Makefile
@@ -11,6 +11,11 @@ commands:
 	coordlist=$(INPUT)/image.lis \
 	to=$(OUTPUT)/pointlistNoAppendTruth.pvl \
 	coordtype=IMAGE append=FALSE > /dev/null;
+	cat $(OUTPUT)/pointlistNoAppendTruth.pvl | \
+	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/g' \
+	> $(OUTPUT)/pointlistNoAppendTruthtmp.pvl;
+	$(MV) $(OUTPUT)/pointlistNoAppendTruthtmp.pvl \
+	$(OUTPUT)/pointlistNoAppendTruth.pvl;
 	$(APPNAME) from=$(INPUT)/ab102401.cub \
 	coordlist=$(INPUT)/image.lis \
 	format=FLAT coordtype=IMAGE \
@@ -21,3 +26,8 @@ commands:
 	format=FLAT coordtype=IMAGE \
 	to=$(OUTPUT)/pointlistNoAppendTruth.csv \
 	append=FALSE > /dev/null;
+	cat $(OUTPUT)/pointlistNoAppendTruth.csv | \
+	$(SED) 's/^.*\(ab102401.cub\)\(.*\)/\1\2/g' \
+	> $(OUTPUT)/pointlistNoAppendTruthtmp.csv;
+	$(MV) $(OUTPUT)/pointlistNoAppendTruthtmp.csv \
+	$(OUTPUT)/pointlistNoAppendTruth.csv;
