--- a/isis/src/base/apps/campt/tsts/no_sample_line/Makefile
+++ b/isis/src/base/apps/campt/tsts/no_sample_line/Makefile
@@ -8,7 +8,8 @@ commands:
 	$(APPNAME) from=$(INPUT)/ab102401.cub \
 	> $(OUTPUT)/noSampleLineTruth.txt;
 	cat $(OUTPUT)/noSampleLineTruth.txt | \
-	sed 's/\([0-9]*\.[0-9]\{5\}\)[0-9]*/\1/g' \
+	$(SED) 's/\([0-9]*\.[0-9]\{5\}\)[0-9]*/\1/g' | \
+	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/' \
 	>& $(OUTPUT)/noSampleLineTruthtmp.txt;
 	$(MV) $(OUTPUT)/noSampleLineTruthtmp.txt \
 	$(OUTPUT)/noSampleLineTruth.txt;
