PROG Fixed issue with disregarding multi-line filepaths. References #1449.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6086 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/campt/tsts/pointlist_append/Makefile
+++ b/isis/src/base/apps/campt/tsts/pointlist_append/Makefile
@@ -12,6 +12,7 @@ commands:
 	to=$(OUTPUT)/pointlistAppendTruth.pvl \
 	coordtype=IMAGE > /dev/null;
 	cat $(OUTPUT)/pointlistAppendTruth.pvl | \
+	$(SED) '/Filename.*/ { N; N; N; N; s/-\n[ ]*//g; }' | \
 	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/g' \
 	> $(OUTPUT)/pointlistAppendTruthtmp.pvl;
 	$(MV) $(OUTPUT)/pointlistAppendTruthtmp.pvl \
