--- a/isis/src/base/apps/campt/tsts/pointlist_ground/Makefile
+++ b/isis/src/base/apps/campt/tsts/pointlist_ground/Makefile
@@ -8,6 +8,7 @@ commands:
 	to=$(OUTPUT)/pointlistGroundTruth.pvl \
 	append=false coordtype=GROUND > /dev/null;
 	cat $(OUTPUT)/pointlistGroundTruth.pvl | \
+	$(SED) '/Filename.*/ { N; N; N; N; s/-\n[ ]*//g; }' | \
 	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/g' \
 	> $(OUTPUT)/pointlistGroundTruthtmp.pvl; 
 	$(MV) $(OUTPUT)/pointlistGroundTruthtmp.pvl \
