--- a/isis/src/base/apps/campt/tsts/set_sample_or_line/Makefile
+++ b/isis/src/base/apps/campt/tsts/set_sample_or_line/Makefile
@@ -9,6 +9,7 @@ commands:
 	sample=10 > /dev/null;
 	cat $(OUTPUT)/onlySampleTruth.pvl | \
 	$(SED) 's/\([0-9]*\.[0-9]\{5\}\)[0-9]*/\1/g' | \
+	$(SED) '/Filename.*/ { N; N; N; N; s/-\n[ ]*//g; }' | \
 	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/' \
 	> $(OUTPUT)/onlySampleTruthtmp.pvl;
 	$(MV) $(OUTPUT)/onlySampleTruthtmp.pvl \
@@ -18,6 +19,7 @@ commands:
 	line=10 > /dev/null;
 	cat $(OUTPUT)/onlyLineTruth.pvl | \
 	$(SED) 's/\([0-9]*\.[0-9]\{5\}\)[0-9]*/\1/g' | \
+	$(SED) '/Filename.*/ { N; N; N; N; s/-\n[ ]*//g; }' | \
 	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/' \
 	> $(OUTPUT)/onlyLineTruthtmp.pvl;
 	$(MV) $(OUTPUT)/onlyLineTruthtmp.pvl \
