--- a/isis/src/base/apps/campt/tsts/pointlist_no_append/Makefile
+++ b/isis/src/base/apps/campt/tsts/pointlist_no_append/Makefile
@@ -12,6 +12,7 @@ commands:
 	to=$(OUTPUT)/pointlistNoAppendTruth.pvl \
 	coordtype=IMAGE append=FALSE > /dev/null;
 	cat $(OUTPUT)/pointlistNoAppendTruth.pvl | \
+	$(SED) '/Filename.*/ { N; N; N; N; s/-\n[ ]*//g; }' | \
 	$(SED) 's/\(.*= \).*\(ab102401.cub\)/\1\2/g' \
 	> $(OUTPUT)/pointlistNoAppendTruthtmp.pvl;
 	$(MV) $(OUTPUT)/pointlistNoAppendTruthtmp.pvl \
@@ -27,6 +28,7 @@ commands:
 	to=$(OUTPUT)/pointlistNoAppendTruth.csv \
 	append=FALSE > /dev/null;
 	cat $(OUTPUT)/pointlistNoAppendTruth.csv | \
+	$(SED) '/Filename.*/ { N; N; N; N; s/-\n[ ]*//g; }' | \
 	$(SED) 's/^.*\(ab102401.cub\)\(.*\)/\1\2/g' \
 	> $(OUTPUT)/pointlistNoAppendTruthtmp.csv;
 	$(MV) $(OUTPUT)/pointlistNoAppendTruthtmp.csv \
