PROG Fixed issue with Mac not likeing binary data with sed
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6101 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/newhorizons/apps/leisa2isis/tsts/calib/Makefile
+++ b/isis/src/newhorizons/apps/leisa2isis/tsts/calib/Makefile
@@ -21,8 +21,8 @@ commands:
 	catlab from=$(OUTPUT)/lsb_0034933739_0x53c_sci_1_Quality.cub > \
 	  $(OUTPUT)/lsb_0034933739_0x53c_sci_1_Quality.pvl;
 	# Test for the calibration error image name
-	$(SED) 's+XTENSION+XTEN-ION+g' \
-	$(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
+	LC_CTYPE=C && LANG=C && $(SED) 's+XTENSION+XTEN-ION+g' \
+	  $(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
@@ -33,8 +33,8 @@ commands:
 	$(SED) 's/\[.*\/\(temp.fit\)\]/[\1]/' < $(OUTPUT)/temp.txt > $(OUTPUT)/error_error-xtension-key.txt;
 	$(RM) $(OUTPUT)/temp.txt $(OUTPUT)/temp.fit;
 	# Test for the calibration error image extension name
-	$(SED) 's+EXTNAME+EXzNAME+g' \
-	$(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
+	LC_CTYPE=C && LANG=C && $(SED) 's+EXTNAME+EXzNAME+g' \
+	  $(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
@@ -45,8 +45,8 @@ commands:
 	$(SED) 's/\[.*\/\(temp.fit\)\]/[\1]/' < $(OUTPUT)/temp.txt > $(OUTPUT)/error_error-extname-key.txt;
 	$(RM) $(OUTPUT)/temp.txt $(OUTPUT)/temp.fit;
 	# Test for the calibration error image extension name incorrect
-	$(SED) 's+EXTNAME = '"'"'ERRORMAP+EXTNAME = '"'"'ERRxRMAP+g' \
-	$(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
+	LC_CTYPE=C && LANG=C && $(SED) 's+EXTNAME = '"'"'ERRORMAP+EXTNAME = '"'"'ERRxRMAP+g' \
+	  $(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
@@ -57,8 +57,8 @@ commands:
 	$(SED) 's/\[.*\/\(temp.fit\)\]/[\1]/' < $(OUTPUT)/temp.txt > $(OUTPUT)/error_error-extname-value.txt;
 	$(RM) $(OUTPUT)/temp.txt $(OUTPUT)/temp.fit;
 	# Test for the calibration quality image name
-	$(SED) 's+XTENSION+XTEN-ION+g' \
-	$(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
+	LC_CTYPE=C && LANG=C && $(SED) 's+XTENSION+XTEN-ION+g' \
+	  $(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
@@ -69,8 +69,8 @@ commands:
 	$(SED) 's/\[.*\/\(temp.fit\)\]/[\1]/' < $(OUTPUT)/temp.txt > $(OUTPUT)/error_quality-xtension-key.txt;
 	$(RM) $(OUTPUT)/temp.txt $(OUTPUT)/temp.fit;
 	# Test for the calibration quality image extension name
-	$(SED) 's+EXTNAME+EXzNAME+g' \
-	$(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
+	LC_CTYPE=C && LANG=C && $(SED) 's+EXTNAME+EXzNAME+g' \
+	  $(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
@@ -81,8 +81,8 @@ commands:
 	$(SED) 's/\[.*\/\(temp.fit\)\]/[\1]/' < $(OUTPUT)/temp.txt > $(OUTPUT)/error_quality-extname-key.txt;
 	$(RM) $(OUTPUT)/temp.txt $(OUTPUT)/temp.fit;
 	# Test for the calibration quality image extension name incorrect
-	$(SED) 's+EXTNAME = '"'"'QUALITY+EXTNAME = '"'"'QUAxITY+g' \
-	$(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
+	LC_CTYPE=C && LANG=C && $(SED) 's+EXTNAME = '"'"'QUALITY+EXTNAME = '"'"'QUAxITY+g' \
+	  $(INPUT)/lsb_0034933739_0x53c_sci_1.fit > $(OUTPUT)/temp.fit
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
